@@ -1,3 +1,11 @@
+2017-05-29  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/37131
+	* gfortran.dg/promotion_2.f90: Add -finline-matmul-limit=0 to
+	flags.
+	* gfortran.dg/transpose_optimization_1.f90: Likewise.
+	* gfortran.dg/inline_matmul_17.f90:  New test.
+
 2017-05-28  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	* gfortran.dg/matmul_bounds_12.f90:  New test.
